; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_rename.c_test_diff_rename__checks_options_version.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_rename.c_test_diff_rename__checks_options_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@INITIAL_COMMIT = common dso_local global i8* null, align 8
@COPY_RENAME_COMMIT = common dso_local global i8* null, align 8
@GIT_DIFF_OPTIONS_INIT = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@GIT_DIFF_FIND_OPTIONS_INIT = common dso_local global %struct.TYPE_11__ zeroinitializer, align 4
@g_repo = common dso_local global i32 0, align 4
@GIT_DIFF_INCLUDE_UNMODIFIED = common dso_local global i32 0, align 4
@GIT_ERROR_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_rename__checks_options_version() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_10__, align 4
  %7 = alloca %struct.TYPE_11__, align 4
  %8 = alloca %struct.TYPE_9__*, align 8
  %9 = load i8*, i8** @INITIAL_COMMIT, align 8
  store i8* %9, i8** %1, align 8
  %10 = load i8*, i8** @COPY_RENAME_COMMIT, align 8
  store i8* %10, i8** %2, align 8
  %11 = bitcast %struct.TYPE_10__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 bitcast (%struct.TYPE_10__* @GIT_DIFF_OPTIONS_INIT to i8*), i64 4, i1 false)
  %12 = bitcast %struct.TYPE_11__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_11__* @GIT_DIFF_FIND_OPTIONS_INIT to i8*), i64 4, i1 false)
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i8*, i8** %1, align 8
  %15 = call i32* @resolve_commit_oid_to_tree(i32 %13, i8* %14)
  store i32* %15, i32** %3, align 8
  %16 = load i32, i32* @g_repo, align 4
  %17 = load i8*, i8** %2, align 8
  %18 = call i32* @resolve_commit_oid_to_tree(i32 %16, i8* %17)
  store i32* %18, i32** %4, align 8
  %19 = load i32, i32* @GIT_DIFF_INCLUDE_UNMODIFIED, align 4
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %19
  store i32 %22, i32* %20, align 4
  %23 = load i32, i32* @g_repo, align 4
  %24 = load i32*, i32** %3, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @git_diff_tree_to_tree(i32** %5, i32 %23, i32* %24, i32* %25, %struct.TYPE_10__* %6)
  %27 = call i32 @cl_git_pass(i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  store i32 0, i32* %28, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @git_diff_find_similar(i32* %29, %struct.TYPE_11__* %7)
  %31 = call i32 @cl_git_fail(i32 %30)
  %32 = call %struct.TYPE_9__* (...) @git_error_last()
  store %struct.TYPE_9__* %32, %struct.TYPE_9__** %8, align 8
  %33 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @cl_assert_equal_i(i32 %33, i32 %36)
  %38 = call i32 (...) @git_error_clear()
  %39 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  store i32 1024, i32* %39, align 4
  %40 = load i32*, i32** %5, align 8
  %41 = call i32 @git_diff_find_similar(i32* %40, %struct.TYPE_11__* %7)
  %42 = call i32 @cl_git_fail(i32 %41)
  %43 = call %struct.TYPE_9__* (...) @git_error_last()
  store %struct.TYPE_9__* %43, %struct.TYPE_9__** %8, align 8
  %44 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @cl_assert_equal_i(i32 %44, i32 %47)
  %49 = load i32*, i32** %5, align 8
  %50 = call i32 @git_diff_free(i32* %49)
  %51 = load i32*, i32** %3, align 8
  %52 = call i32 @git_tree_free(i32* %51)
  %53 = load i32*, i32** %4, align 8
  %54 = call i32 @git_tree_free(i32* %53)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32* @resolve_commit_oid_to_tree(i32, i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_diff_tree_to_tree(i32**, i32, i32*, i32*, %struct.TYPE_10__*) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_diff_find_similar(i32*, %struct.TYPE_11__*) #2

declare dso_local %struct.TYPE_9__* @git_error_last(...) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_error_clear(...) #2

declare dso_local i32 @git_diff_free(i32*) #2

declare dso_local i32 @git_tree_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
